# google-meet-notes

./: .env.example  README.md  pyproject.toml
app/: config.py  crypto.py  db.py  main.py  queue.py  security.py  worker.py
app/api/: deps.py
app/events/: oidc.py  parser.py
app/google/: calendar_client.py  events_client.py  gemini_client.py  meet_client.py  oauth_client.py
app/models/: __init__.py  conference.py  event_subscription.py  meeting.py  notes.py  oauth_connection.py  processed_event.py  transcript.py  user.py
app/schemas/: auth.py  meeting.py  notes.py
app/services/: auth_service.py  connection_service.py  event_service.py  meeting_service.py  notes_service.py  pipeline.py  subscription_service.py  transcript_service.py
docs/: LIVE_SETUP.md
migrations/: env.py
scripts/: proof_run.py
tests/: conftest.py  test_app_lifespan.py  test_auth.py  test_auth_service.py  test_calendar_client.py  test_config.py  test_connection_service.py  test_connections_api.py  test_crypto.py  test_deps_providers.py  test_event_models.py  test_event_parser.py  test_event_service.py  test_events_client.py  test_gemini_client.py  test_meet_client.py  test_meet_client_transcript.py  test_meeting_schema.py  test_meeting_service.py  test_meetings_api.py  test_notes_api.py  test_notes_model.py  test_notes_schema.py  test_notes_service.py  test_oauth_client.py  test_oauth_state.py  test_oidc_verifier.py  test_pipeline.py  test_queue.py  test_security.py  test_subscription_service.py  test_transcript_model.py  test_transcript_service.py  test_webhooks_api.py  test_worker.py
(+16 files in other folders)
